cssfix: delete button position fixed on IE

--- a/app/assets/stylesheets/cycles/form.css.scss
+++ b/app/assets/stylesheets/cycles/form.css.scss
@@ -69,14 +69,16 @@ form {
   }
 
 /* Customization */
-  .objectives-fields {
-    width: 100%;
-  }
-
   .cycle_priorities {
     box-sizing: border-box;
     width: 100%;
   }
+
+	.objectives-fields li {
+		float: left;
+		clear: both;
+		width: 100%;
+	}
 
   .objectives-fields input {
     width: 85%;
